Added TrainingPr and WendlerProgram components

--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,12 @@ button {
 input {
   border: 1px solid black;
 }
+
+table {
+  border: 1px solid black;
+}
+td {
+  border: 1px solid black;
+  text-align: center;
+  padding: 4px 8px;
+}
